Bug 100892 - Polaris 12: winsys init bad switch (missing break) initializing addrlib
Summary: Polaris 12: winsys init bad switch (missing break) initializing addrlib
Status: RESOLVED FIXED
Alias: None
Product: Mesa
Classification: Unclassified
Component: Drivers/Gallium/radeonsi (show other bugs)
Version: git
Hardware: All All
: highest blocker
Assignee: Default DRI bug account
QA Contact: Default DRI bug account
URL:
Whiteboard:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-04-30 18:41 UTC by Greg White
Modified: 2017-05-04 23:37 UTC (History)
0 users

See Also:
i915 platform:
i915 features:


Attachments
Fix bad fallthough. (527 bytes, patch)
2017-04-30 18:41 UTC, Greg White
Details | Splinter Review

Description Greg White 2017-04-30 18:41:38 UTC
Created attachment 131162 [details] [review]
Fix bad fallthough.

Polaris 12 is missing a break and falls through to Vega initialization.

Patch which fixes the problem is attached.
Comment 1 Greg White 2017-04-30 18:42:24 UTC
Should add: everything seems fine on Polaris 12 once that break is inserted.
Comment 2 Marek Olšák 2017-05-04 23:37:16 UTC
Thanks. I pushed the fix to master.


Use of freedesktop.org services, including Bugzilla, is subject to our Code of Conduct. How we collect and use information is described in our Privacy Policy.