winsys/amdgpu: fix Polaris12 (RX 550) breakage

reported by Greg White.

Bugzilla: https://bugs.freedesktop.org/show_bug.cgi?id=100892
Cc: 17.1 <mesa-stable@lists.freedesktop.org>
(cherry picked from commit 69e6eab6533ff48f72223cd21ef640242c52598b)