src/gallium/winsys/amdgpu/drm/amdgpu_winsys.c
@@ -310,6 +310,7 @@ static bool do_winsys_init(struct amdgpu_winsys *ws, int fd)
    case CHIP_POLARIS12:
       ws->family = FAMILY_VI;
       ws->rev_id = VI_POLARIS12_V_A0;
+      break;
    case CHIP_VEGA10:
       ws->family = FAMILY_AI;
       ws->rev_id = AI_VEGA10_P_A0;
